# aether

./: CMakeLists.txt  LICENSE  readme.md
src/: context.cpp  context.hpp
src/config/: config.cpp  config.hpp
src/cs2/: interface_mgr.cpp  interface_mgr.hpp  memory_mgr.cpp  memory_mgr.hpp  utils.hpp
src/cs2/client/: csgo_input.cpp  csgo_input.hpp  entity.cpp  entity.hpp  entity_system.cpp  entity_system.hpp  player_controller.cpp  player_controller.hpp  player_pawn.cpp  player_pawn.hpp  script_system.cpp  script_system.hpp  view_render.cpp  view_render.hpp  weapon.hpp
src/cs2/engine/: engine_cvar.cpp  engine_cvar.hpp  input_service.cpp  input_service.hpp  rendering_world_session.cpp  rendering_world_session.hpp
src/cs2/inputsystem/: input_stack_system.cpp  input_stack_system.hpp  input_system.cpp  input_system.hpp
src/cs2/rendersystemdx11/: render_device.cpp  render_device.hpp  swap_chain.cpp  swap_chain.hpp
src/cs2/schemasystem/: schema_system.cpp  schema_system.hpp
src/cs2/tier0/: console.hpp  game_info.hpp  platform.hpp  utlstring.hpp
src/hooks/: d3d11_present.cpp  d3d11_resize_buffers.cpp  wndproc.cpp
src/hooks/csgo_input/: create_move.cpp
src/hooks/inputsystem/: apply_input_stack.cpp
src/math/: matrix.hpp  qangle.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/scripts/: readme.md  script.cpp  script.hpp  script_mgr.cpp  script_mgr.hpp
src/ui/: ui_manager.cpp  ui_manager.hpp
src/ui/components/: code_editor.cpp  code_editor.hpp
src/ui/fonts/: roboto.hpp
src/ui/views/: aimbot_view.cpp  aimbot_view.hpp  esp_view.cpp  esp_view.hpp
src/utils/: batch_scan.hpp  dynamic_import.hpp  inline_hook.hpp  module.hpp  page.hpp  vmt.hpp
